# robotstat_lab1

./: .gitignore  CMakeLists.txt  flood_fill.py  logparse.py  map_object.cc  map_object.h  map_parser.py  motion_model.cc  motion_model.h  motion_model.py  observation_model.cc  obssensemodels.py  obssensemodels.py~  particle_filter.py  pdbwrap.py  preprocessed_rays_36_wean.dat.npz  preprocessed_rays_72_wean.dat_80.npz  preprocessed_rays_72_wean.dat_99.npz  testModels.py  testModels.py~  tmplog.txt  util.h  vis_history.py  xy_record_robotdata1.log_11:24:40.505391.npz
data/: #instruct.txt#  instruct.txt  logparse.py~
